--- a/style.css
+++ b/style.css
@@ -90,3 +90,30 @@ nav ul li:hover {
     transform: scale(1.3);
     transition: all .5s;
 }
+
+
+/* ============ paragraph */
+section.container {
+    padding: 5rem 0;
+}
+
+/* ================== images  */
+.img1,
+.img2,
+.img3 {
+    background: red;
+    height: 60vh;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title {
+    background: rgba(0, 0, 0, 0.615);
+    color: white;
+    font-size: 2rem;
+    padding: 1.5rem 5rem;
+    border-radius: 10px;
+}
+
